--- a/index.html
+++ b/index.html
@@ -70,6 +70,63 @@ html, body { margin:0; padding:0; }
     box-shadow: inset 0 0 5px rgba(255,153,0,0.4);
     text-transform: uppercase;
 }
+
+    /* ================= DARK MODE ================= */
+
+/* Panoul de control */
+#radioPanel {
+    background: #222;
+    color: #eee;
+    border: 1px solid #444;
+    box-shadow: 0 4px 15px rgba(0,0,0,0.8);
+}
+
+#radioPanel input {
+    background: #111;
+    color: #ff9900; /* Asortat cu RDS-ul */
+    border: 1px solid #555;
+}
+
+.tune-btn {
+    background: #333;
+    color: #fff;
+    border: 1px solid #555;
+}
+
+.tune-btn:hover { 
+    background: #444; 
+}
+
+.countryBtn {
+    background: #333;
+    color: #ccc;
+    border: 1px solid #555;
+}
+
+.countryBtn.active {
+    background: #ff9900; /* Portocaliu pentru vizibilitate maximă */
+    color: #111;
+    border-color: #cc7a00;
+}
+
+/* Ferestrele de pe hartă (Leaflet Popups) */
+.leaflet-popup-content-wrapper {
+    background: #222;
+    color: #eee;
+    border: 1px solid #444;
+    box-shadow: 0 3px 14px rgba(0,0,0,0.6);
+}
+
+.leaflet-popup-tip {
+    background: #222;
+    border-top: 1px solid #444;
+    border-left: 1px solid #444;
+}
+
+/* Link-urile (dacă apar în pop-up) */
+.leaflet-popup-content a {
+    color: #ff9900;
+}
 </style>
 </head>
 
@@ -334,3 +391,4 @@ function bearing(a, b){
 </script>
 </body>
 </html>
+
