--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 html, body { margin:0; padding:0; background: #000; }
 #map { height:100vh; width:100vw; }
 
-/* ================= DARK MODE PANOU CONTROL (Refăcut după model) ================= */
+/* ================= DARK MODE PANOU CONTROL ================= */
 #radioPanel {
     position: absolute;
     top: 10px;
     left: 60px;
-    background: #2b2d31; /* Gri închis modern */
+    background: #2b2d31; 
     color: #eee;
     padding: 16px 20px;
     border-radius: 8px;
@@ -56,10 +56,9 @@ html, body { margin:0; padding:0; background: #000; }
     padding: 0;
     margin: 0;
     letter-spacing: 2px;
-    text-shadow: 0 0 5px rgba(0,255,0,0.6); /* Efect de glow LCD */
+    text-shadow: 0 0 5px rgba(0,255,0,0.6); 
 }
 
-/* Ascundem săgețile native de la input-ul de tip number */
 #freqInput::-webkit-outer-spin-button,
 #freqInput::-webkit-inner-spin-button { -webkit-appearance: none; margin: 0; }
 #freqInput[type=number] { -moz-appearance: textfield; }
@@ -93,12 +92,18 @@ html, body { margin:0; padding:0; background: #000; }
 }
 .tune-btn:hover { background: #404249; color: #fff; }
 
-/* ================= BUTON GEOLOCAȚIE ================= */
-.geo-btn {
-    width: 100%;
+/* ================= RAND BUTOANE ACTIUNI ================= */
+.action-row {
+    display: flex;
+    gap: 8px;
     margin-top: 15px;
     margin-bottom: 15px;
-    padding: 8px;
+    width: 100%;
+}
+
+.action-btn {
+    flex: 1;
+    padding: 8px 10px;
     cursor: pointer;
     background: transparent;
     color: #00ff00;
@@ -106,9 +111,22 @@ html, body { margin:0; padding:0; background: #000; }
     border-radius: 4px;
     font-weight: bold;
     transition: 0.2s;
-    font-size: 14px;
+    font-size: 12px;
+    text-align: center;
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    white-space: nowrap;
 }
-.geo-btn:hover { background: rgba(0,255,0,0.1); }
+.action-btn:hover { background: rgba(0,255,0,0.1); color: #fff; }
+
+/* Stilizare speciala pentru butonul YouTube */
+.yt-btn {
+    color: #ff4d4d;
+    border-color: #ff4d4d;
+}
+.yt-btn:hover { background: rgba(255,77,77,0.1); }
 
 /* ================= BUTOANE ȚĂRI ================= */
 .countryBtn { 
@@ -209,7 +227,11 @@ hr { border: 0; border-top: 1px solid #555; margin: 10px 0; }
         <button class="tune-btn" onclick="stepFreq(0.1)">+</button>
     </div>
     
-    <button id="geoBtn" class="geo-btn" onclick="locateUser()">📍 Geolocation</button>
+    <div class="action-row">
+        <button id="geoBtn" class="action-btn" onclick="locateUser()">📍 Geolocation</button>
+        <a href="https://servers.fmdx.org/" target="_blank" class="action-btn">📻 TEF Servers</a>
+        <a href="https://www.youtube.com/@DragosDXing" target="_blank" class="action-btn yt-btn">▶️ My Youtube</a>
+    </div>
     
     <div style="font-size: 12px; margin-bottom: 4px; margin-top: 10px; color: #aaa;">Country / Database:</div>
     <div style="display: flex; gap: 6px;">
@@ -311,7 +333,7 @@ function locateUser() {
             receiverMarker.on("dragend", () => {
                 let p = receiverMarker.getLatLng();
                 receiverMarker.setPopupContent("<b>Searching location...</b>");
-                getLocationName(p.lat, p.lng).then(name => { receiverMarker.setPopupContent(`<b>${name}</b><br>(right click to remove)`); });
+                getLocationName(p.lat, p.lng).then(name => { receiverMarker.setPopupContent(`<b>📍 ${name}</b><br>(right click to remove)`); });
             });
             receiverMarker.on("contextmenu", () => {
                 map.removeLayer(receiverMarker); receiverMarker = null;
@@ -510,7 +532,7 @@ function setCountry(c){
     loadStations(c);
 }
 
-/* ================= RECEIVER & BEARING ================= */
+/* ================= RECEIVER & BEARING (MANUAL) ================= */
 map.on("contextmenu", function(e){
     if(e.originalEvent.target.closest(".leaflet-marker-icon")) return;
     if(receiverMarker){ map.removeLayer(receiverMarker); receiverMarker = null; }
